<resources>
    <string name="app_name">MarathonApp</string>
    <string name="record_lap">Record lap</string>
    <string name="welcome_to_pso_jalkathon_2024">Welcome to PSO Jalkathon 2024!</string>
    <string name="enter_bib_number_to_record_a_lap">Type bib number to record a lap</string>
    <string name="get_status">Check status of marathon</string>
    <string name="select_events_to_get_status">Select events to get status</string>
    <string name="award_done">Award done</string>
</resources>